<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_title_person_data"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/cardview_dark_background">

        <TextView
            android:id="@+id/text_view_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/you_data"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_title_person_data"
        android:layout_margin="@dimen/relative_layout_fragment_dialog_margin">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edit_text_telephone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_name"
            android:gravity="center_vertical"
            android:hint="@string/telephone_number" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_telephone_number"
            android:gravity="center_vertical"
            android:hint="@string/email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_email"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_do_not_change_person_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_change_person_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
