<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_price"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_text_view_data">

    <LinearLayout
        android:id="@+id/linear_layout_column"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/linear_layout_column_margin_bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_name_of_the_manicure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_view_manicure_margin_right"
            android:text="@string/name_of_the_manicure"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_price_of_the_manicure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_view_manicure_margin_right"
            android:text="@string/price_of_the_manicure" />

        <TextView
            android:id="@+id/text_view_time_of_the_manicure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_the_manicure" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:layout_below="@+id/linear_layout_column"
        android:background="@color/bb_darkBackgroundColor" />
</RelativeLayout>