<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.forste.manicure.view.fragment.AuthorizationFragment">

    <RelativeLayout
        android:id="@+id/relative_layout_authorization"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_logo_height"
            android:layout_margin="@dimen/image_view_logo_margin"
            android:src="@drawable/logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/image_view_logo"
            android:layout_marginBottom="@dimen/relative_layout_margin_bottom"
            android:layout_marginLeft="@dimen/relative_layout_margin"
            android:layout_marginRight="@dimen/relative_layout_margin"
            android:layout_marginTop="@dimen/relative_layout_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/relative_layout_button_authorization">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view_email"
                    style="@style/CardViewTheme"
                    android:layout_marginBottom="@dimen/edit_text_phone_number_margin_bottom"
                    app:cardElevation="@dimen/card_view_elevation">

                    <EditText
                        android:id="@+id/edit_text_email"
                        style="@style/EditTextTheme"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view_password"
                    style="@style/CardViewTheme"
                    android:layout_below="@id/card_view_email"
                    android:layout_marginBottom="@dimen/edit_text_password_margin_bottom"
                    app:cardElevation="@dimen/card_view_elevation">

                    <EditText
                        android:id="@+id/edit_text_password"
                        style="@style/EditTextTheme"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_button_authorization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/button_authorization"
                    style="@style/ButtonTheme"
                    android:background="@drawable/elevation_background"
                    android:text="@string/Authorization" />

                <Button
                    android:id="@+id/button_registration"
                    style="@style/ButtonTheme"
                    android:layout_below="@id/button_authorization"
                    android:background="@drawable/elevation_background"
                    android:text="@string/Registration" />

                <Button
                    android:id="@+id/button_forgot_password"
                    style="@style/ButtonTheme"
                    android:layout_below="@+id/button_registration"
                    android:background="@drawable/elevation_background"
                    android:text="@string/ForgotPassword" />
            </RelativeLayout>
        </RelativeLayout>
        <com.github.glomadrian.loadingballs.BallView
            android:id="@+id/progress_bar"
            style="@style/BallViewTheme"
            app:ball_colors="@array/colors"
            app:balls="5"
            app:enable_size_animation="true"
            app:max_ball_size="@dimen/ball_max_size"
            app:min_ball_size="@dimen/ball_min_size"
            app:movement_cycle_time="1500"
            app:size_cycle_time="500" />
    </RelativeLayout>
</FrameLayout>
