<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_linear_layout"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_view_fire_record"
        android:layout_width="@dimen/image_width_record"
        android:layout_centerVertical="true"
        android:layout_height="@dimen/image_height_record"
        android:background="@drawable/ic_fire_active" />

    <RelativeLayout
        android:id="@+id/relative_layout_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/relative_layout_margin_left"
        android:layout_toRightOf="@+id/image_view_fire_record">

        <TextView
            android:id="@+id/text_view_record_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/manicure"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_record_name">

            <TextView
                android:id="@+id/text_view_record_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date_record" />
            <TextView
                android:id="@+id/text_view_record_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/text_view_margin_left_record_time"
                android:text="@string/time_record" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/button_chenge_record"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/button_margin_left"
            android:layout_marginRight="@dimen/button_margin_right"
            android:background="@drawable/ic_pencil" />

        <Button
            android:id="@+id/button_delete_record"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_toRightOf="@+id/button_chenge_record"
            android:background="@drawable/ic_trash" />
    </RelativeLayout>

</RelativeLayout>