<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.forste.manicure.view.fragment.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_layout_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                card_view:cardElevation="@dimen/card_view_elevation"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:id="@+id/linea_layout_profile"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                    <RelativeLayout
                        android:layout_width="150dp"
                        android:layout_height="150dp">

                        <ImageView
                            android:id="@+id/image_view_photo_profile"
                            android:layout_width="@dimen/layout_width_photo"
                            android:layout_height="@dimen/layout_height_photo"
                            android:layout_centerInParent="true"
                            android:background="@drawable/ic_girl" />
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/relative_layout_profile_data"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/text_view_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="5"
                                android:gravity="center_vertical"
                                android:text="@string/name" />

                            <Button
                                android:id="@+id/button_open_fragment_dialog_to_change_person_data"
                                android:layout_width="34dp"
                                android:layout_height="34dp"
                                android:layout_margin="4dp"
                                android:layout_gravity="top"
                                android:background="@drawable/ic_pencil"
                                android:layout_weight="1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/text_view_telephone_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/telephone_number" />

                        <TextView
                            android:id="@+id/text_view_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/email" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/card_view_profile"
                android:layout_margin="@dimen/card_view_margin"
                android:minHeight="150dp"
                card_view:cardElevation="@dimen/card_view_elevation"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_view_is_empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/recicler_view_is_empty"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_view_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/record" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view_record"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
